# spaceship_robotica

./: README.md
spaceship_msgs/: CMakeLists.txt  package.xml
spaceship_msgs/msg/: MotorCommand.msg
spaceship_sim/: package.xml  setup.cfg  setup.py
spaceship_sim/launch/: spaceship_sim.launch.py
spaceship_sim/msg/: ShipState.msg
spaceship_sim/rviz/: spaceship.rviz
spaceship_sim/spaceship_sim/: rviz_publisher.py  ship_simulator.py
spaceship_student_laha/: package.xml  setup.cfg  setup.py
spaceship_student_laha/spaceship_student_laha/: controller.py
spaceship_student_laha_msgs/: CMakeLists.txt  package.xml
