<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spaceship_msgs</name>
  <version>1.0.0</version>
  <description>
    Definición de mensajes ROS2 para el simulador de nave espacial.
    Paquete ament_cmake separado para que tanto spaceship_sim como
    spaceship_controller puedan depender de él.
  </description>
  <maintainer email="profesor@universidad.es">Profesor</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
