<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spaceship_sim</name>
  <version>1.0.0</version>
  <description>
    Simulador 2D de nave espacial con modelo diferencial (T invertida).
    Proporcionado por el profesor — los alumnos NO deben modificar este paquete.
  </description>
  <maintainer email="profesor@universidad.es">Profesor</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>rviz2</depend>
  <depend>spaceship_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
